End with student functional

--- a/eJournal/src/main/resources/templates/student-schedule.html
+++ b/eJournal/src/main/resources/templates/student-schedule.html
@@ -16,7 +16,7 @@
     <a th:href="@{/student-absenteeism(userId=${userId})}">Прогулы</a>
     <a href="/">Выйти</a>
 </div>
-<div class="main">
+<<div class="main">
     <div class="container mt-4">
         <h1 class="text-center mb-4">Расписание группы</h1>
         <table class="table">
@@ -42,5 +42,7 @@
         </table>
     </div>
 </div>
+
+
 </body>
 </html>
