--- a/eJournal/src/main/resources/templates/student-marks.html
+++ b/eJournal/src/main/resources/templates/student-marks.html
@@ -18,7 +18,26 @@
 <div class="main">
     <div class="container mt-4">
         <h1 class="text-center mb-4">Отметки</h1>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Предмет</th>
+                <th scope="col">Время</th>
+                <th scope="col">Дата</th>
+                <th scope="col">Оценка</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="mark : ${marks}">
+                <td th:text="${mark.subject}"></td>
+                <td th:text="${mark.time}"></td>
+                <td th:text="${mark.date}"></td>
+                <td th:text="${mark.mark}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
+
 </body>
 </html>
